# nostr-nations

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.ralph/: .circuit_breaker_state  .claude_session_id  .ralph_session  .ralph_session_history  .response_analysis  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
.ralph/specs/: 00-architecture.md  01-nostr-integration.md  02-cashu-randomness.md  03-networking.md  04-game-mechanics.md  05-tech-tree.md  06-diplomacy.md  07-ui-design.md  08-data-models.md  09-ai-roadmap.md
crates/nostr-nations-bevy/: Cargo.toml
crates/nostr-nations-bevy/src/: components.rs  lib.rs  plugins.rs  resources.rs  systems.rs
crates/nostr-nations-core/: Cargo.toml
crates/nostr-nations-core/src/: cashu.rs  city.rs  combat.rs  events.rs  game_state.rs  hex.rs  lib.rs  map.rs  mapgen.rs  memory.rs  pathfinding.rs  player.rs  replay.rs  settings.rs  technology.rs  terrain.rs  trading.rs  types.rs  unit.rs  victory.rs  visibility.rs  yields.rs
crates/nostr-nations-core/tests/: fog_of_war_tests.rs  integration_tests.rs  protocol_tests.rs
crates/nostr-nations-network/: Cargo.toml
crates/nostr-nations-network/src/: batch.rs  cache.rs  compression.rs  conflict.rs  delta.rs  discovery.rs  encryption.rs  lib.rs  offline.rs  peer.rs  pool.rs  priority.rs  randomness.rs  sync.rs
crates/nostr-nations-network/src/relay/: filter.rs  mod.rs  storage.rs  subscription.rs
crates/nostr-nations-network/tests/: connectivity_tests.rs  stress_tests.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  GAME_MECHANICS.md  USER_MANUAL.md
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: events.rs  main.rs  state.rs
src-tauri/src/commands/: actions.rs  game.rs  mod.rs  network.rs  saves.rs
src/audio/: AudioContext.tsx  AudioManager.ts  index.ts  sounds.ts  useAudio.ts
src/components/: GameView.tsx  LoadingScreen.tsx  MainMenu.tsx  SettingsScreen.tsx  index.ts
src/components/effects/: CityFoundedEffect.tsx  CombatEffect.tsx  ParticleSystem.tsx  SelectionEffect.tsx  TechResearchedEffect.tsx  index.ts
src/components/game/: CityMesh.tsx  FogOfWar.tsx  HexMap.tsx  HexTileMesh.tsx  UnitMesh.tsx
src/components/hud/: NotificationContainer.tsx  NotificationToast.tsx  index.ts
src/components/menu/: JoinGameScreen.tsx  LoadGameScreen.tsx  NewGameWizard.tsx
src/components/overlays/: CityManagementScreen.tsx  DiplomacyScreen.tsx  MilitaryOverview.tsx  TechTreeViewer.tsx  VictoryScreen.tsx  index.ts
src/components/ui/: BottomBar.tsx  ConfirmDialog.tsx  LoadingSpinner.tsx  Minimap.tsx  Modal.tsx  ProgressBar.tsx  SelectionPanel.tsx  Toast.tsx  Tooltip.tsx  TopBar.tsx  index.ts
src/hooks/: index.ts  useTauri.ts
src/shaders/: fogOfWar.ts  index.ts
src/stores/: gameStore.ts  index.ts  settingsStore.ts
src/types/: game.ts
