[workspace]
resolver = "2"
members = [
    "crates/nostr-nations-core",
    "crates/nostr-nations-bevy",
    "crates/nostr-nations-network",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nostr Nations Contributors"]
license = "MIT"
repository = "https://github.com/nostr-nations/nostr-nations"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Game engine (optional, for bevy crate)
bevy = "0.14"

# Nostr protocol
nostr-sdk = "0.35"

# Cashu for randomness
cdk = "0.5"

# P2P networking
iroh = "0.28"

# Testing
rand = "0.8"
