[package]
name = "nostr-nations-tauri"
version = "0.1.0"
description = "A Civilization-style 4X strategy game using Nostr events"
authors = ["Nostr Nations Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nostr-nations/nostr-nations"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Our crates
nostr-nations-core = { path = "../crates/nostr-nations-core" }
nostr-nations-bevy = { path = "../crates/nostr-nations-bevy" }
nostr-nations-network = { path = "../crates/nostr-nations-network" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
